# hsnf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  LICENSE  MANIFEST.in  README.md  api.core.html  api.html  api.integer_system.html  api.lattice.html  changelog.html  definition.html  genindex.html  index.html  integer_linear_system.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: api.core.doctree  api.doctree  api.integer_system.doctree  api.lattice.doctree  changelog.doctree  definition.doctree  environment.pickle  genindex.doctree  index.doctree  integer_linear_system.doctree
.github/: dependabot.yml
_modules/: index.html
_sources/: api.core.rst.txt  api.integer_system.rst.txt  api.lattice.rst.txt  api.rst.txt  changelog.md.txt  changelog.rst.txt  index.md.txt  index.rst.txt  integer_linear_system.md.txt
_static/: documentation_options.js
develop/: .buildinfo  api.core.html  api.html  api.integer_system.html  api.lattice.html  changelog.html  definition.html  genindex.html  index.html  integer_linear_system.html  objects.inv  search.html  searchindex.js
docs/: .buildinfo  Makefile  README.md  changelog.md  changelog.rst  conf.py  definition.rst  genindex.html  index.html  index.md  index.rst  make_docs.sh  objects.inv  search.html  searchindex.js
example/: integer_linear_system.py
examples/: basic.py  integer_linear_system.py
hsnf/: Z_module.py  __init__.py  hermite_normal_form.py  integer_system.py  lattice.py  smith_normal_form.py  type.py  utils.py
(+33 files in other folders)
